--- a/index.html
+++ b/index.html
@@ -1,196 +1,163 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Psych Diaries • Cat Calendar</title>
-  <style>
-    :root{
-      --ink:#3a2f2a;
-      --terracotta:#9b4d3f;
-      --beige:#fbf4ea;
-      --shadow:0 14px 40px rgba(0,0,0,.16);
-      --border: rgba(155,77,63,.14);
-    }
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Psych Diaries · Cat Calendar</title>
 
-    *{ box-sizing:border-box; }
-    html, body{ height:100%; }
+<style>
+  :root{
+    --ink:#3a2f2a;
+    --beige:#f4e6dc;
+    --glass:rgba(255,255,255,.55);
+  }
 
-    body{
-      margin:0;
-      display:grid;
-      place-items:center;
-      background: var(--beige);
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      color: var(--ink);
-    }
+  *{box-sizing:border-box;}
+  html,body{
+    height:100%;
+    margin:0;
+    font-family: system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
+    background:#000;
+  }
 
-    /* Notion-friendly container */
-    .card{
-      width: min(460px, 92vw);
-      border-radius: 28px;
-      border: 1px solid var(--border);
-      box-shadow: var(--shadow);
-      position: relative;
-      overflow: hidden;
-      background: rgba(255,255,255,.40);
-      backdrop-filter: blur(10px);
-      padding: 18px;
-      min-height: 320px;
-    }
+  body{
+    display:grid;
+    place-items:center;
+  }
 
-    /* Cat video background INSIDE card */
-    .card-video{
-      position:absolute;
-      inset:0;
-      width:100%;
-      height:100%;
-      object-fit:cover;
-      opacity: .38;              /* tweak: .28–.50 */
-      filter: saturate(1.05);
-      pointer-events:none;
-      z-index:0;
-    }
+  .card{
+    position:relative;
+    width:min(520px,92vw);
+    aspect-ratio: 16 / 10;
+    border-radius:28px;
+    overflow:hidden;
+    box-shadow:0 20px 60px rgba(0,0,0,.25);
+    background:var(--beige);
+  }
 
-    @media (prefers-reduced-motion: reduce){
-      .card-video{ display:none; }
-    }
+  /* 🎥 BACKGROUND VIDEO */
+  .card video{
+    position:absolute;
+    inset:0;
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    object-position:center 35%; /* shifts cat UP */
+    opacity:.5;
+    filter:saturate(1.1) contrast(1.05);
+    pointer-events:none;
+  }
 
-    /* UI */
-    .ui{
-      position: relative;
-      z-index: 1;
-      height: 100%;
-      display: grid;
-      align-content: start;
-      gap: 14px;
-    }
+  /* 🌸 SOFT OVERLAY */
+  .overlay{
+    position:absolute;
+    inset:0;
+    background:linear-gradient(
+      to bottom,
+      rgba(244,230,220,.92),
+      rgba(244,230,220,.75)
+    );
+  }
 
-    .title{
-      display:flex;
-      justify-content: space-between;
-      align-items:center;
-      gap: 10px;
-      padding: 2px 4px 10px;
-    }
+  /* 📅 CONTENT */
+  .content{
+    position:relative;
+    z-index:2;
+    height:100%;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    text-align:center;
+    color:var(--ink);
+    padding:24px;
+  }
 
-    .brand{
-      font-weight: 700;
-      letter-spacing: .2px;
-      opacity: .9;
-      font-size: 16px;
-    }
+  .title{
+    position:absolute;
+    top:22px;
+    left:26px;
+    font-weight:650;
+    font-size:18px;
+    opacity:.9;
+  }
 
-    .dateWrap{
-      display:grid;
-      place-items:center;
-      padding: 26px 10px 18px;
-      margin-top: 10px;
-    }
+  .day-pill{
+    font-size:18px;
+    font-weight:600;
+    padding:10px 22px;
+    border-radius:999px;
+    background:var(--glass);
+    backdrop-filter:blur(6px);
+    margin-bottom:14px;
+  }
 
-    .day{
-      font-size: 18px;
-      font-weight: 650;
-      letter-spacing: .6px;
-      opacity: .85;
-      padding: 8px 14px;
-      border-radius: 999px;
-      border: 1px solid rgba(155,77,63,.14);
-      background: rgba(255,255,255,.55);
-      backdrop-filter: blur(8px);
-    }
+  .day-number{
+    font-size:88px;
+    font-weight:800;
+    line-height:1;
+    margin:4px 0 14px;
+    text-shadow:0 2px 0 rgba(255,255,255,.6);
+  }
 
-    .date{
-      margin-top: 14px;
-      font-size: 64px;
-      font-weight: 800;
-      letter-spacing: 1px;
-      text-shadow:
-        0 2px 14px rgba(255,255,255,.9),
-        0 1px 0 rgba(255,255,255,.8);
-    }
+  .date-line{
+    font-size:18px;
+    font-weight:600;
+    padding:10px 22px;
+    border-radius:999px;
+    background:var(--glass);
+    backdrop-filter:blur(6px);
+    opacity:.85;
+  }
 
-    .monthYear{
-      margin-top: 6px;
-      font-size: 18px;
-      letter-spacing: .4px;
-      opacity: .75;
-      padding: 6px 12px;
-      border-radius: 12px;
-      background: rgba(255,255,255,.48);
-      border: 1px solid rgba(155,77,63,.10);
-      backdrop-filter: blur(8px);
-    }
-
-    .footer{
-      margin-top: auto;
-      display:flex;
-      justify-content: space-between;
-      align-items:center;
-      padding: 10px 6px 2px;
-      font-size: 12px;
-      opacity: .65;
-    }
-
-    .tiny{
-      display:flex; gap:8px; align-items:center;
-    }
-    .dot{
-      width:7px; height:7px; border-radius:999px;
-      background: rgba(155,77,63,.35);
-      box-shadow: 0 0 0 4px rgba(155,77,63,.08);
-    }
-  </style>
+  .footer{
+    position:absolute;
+    bottom:18px;
+    width:100%;
+    display:flex;
+    justify-content:space-between;
+    padding:0 26px;
+    font-size:13px;
+    opacity:.6;
+  }
+</style>
 </head>
 
 <body>
-  <div class="card" role="application" aria-label="Calendar widget showing today's date">
-    <video class="card-video" autoplay muted loop playsinline aria-hidden="true">
-      <source src="catvid.mp4" type="video/mp4" />
+  <div class="card">
+    <!-- 🎥 Cat background -->
+    <video autoplay muted loop playsinline>
+      <source src="catvid.mp4" type="video/mp4">
     </video>
 
-    <div class="ui">
-      <div class="title">
-        <div class="brand">Psych Diaries • Cat Calendar</div>
-      </div>
+    <div class="overlay"></div>
 
-      <div class="dateWrap" aria-live="polite">
-        <div id="day" class="day">—</div>
-        <div id="date" class="date">—</div>
-        <div id="monthYear" class="monthYear">—</div>
-      </div>
+    <!-- 📅 Calendar content -->
+    <div class="content">
+      <div class="title">Psych Diaries · Cat Calendar</div>
+
+      <div class="day-pill" id="weekday">Tuesday</div>
+      <div class="day-number" id="day">27</div>
+      <div class="date-line" id="fullDate">January 2026</div>
 
       <div class="footer">
-        <div class="tiny"><span class="dot"></span><span id="status">Local date</span></div>
+        <div>Local date</div>
         <div>© Psych Diaries</div>
       </div>
     </div>
   </div>
 
-  <script>
-    // Shows the user's local date (based on their device timezone)
-    function renderDate(){
-      const now = new Date();
+<script>
+  const now = new Date();
 
-      // Use user's locale automatically; specify weekday/day/month/year formats
-      const day = now.toLocaleDateString(undefined, { weekday: "long" });
-      const dayNum = now.toLocaleDateString(undefined, { day: "numeric" });
-      const monthYear = now.toLocaleDateString(undefined, { month: "long", year: "numeric" });
+  document.getElementById("weekday").textContent =
+    now.toLocaleDateString(undefined,{ weekday:"long" });
 
-      document.getElementById("day").textContent = day;
-      document.getElementById("date").textContent = dayNum;
-      document.getElementById("monthYear").textContent = monthYear;
-    }
+  document.getElementById("day").textContent =
+    now.getDate();
 
-    renderDate();
-
-    // Update shortly after midnight (cheap + reliable)
-    setInterval(() => {
-      const now = new Date();
-      if (now.getHours() === 0 && now.getMinutes() === 0 && now.getSeconds() < 2) {
-        renderDate();
-      }
-    }, 1000);
-  </script>
+  document.getElementById("fullDate").textContent =
+    now.toLocaleDateString(undefined,{ month:"long", year:"numeric" });
+</script>
 </body>
 </html>
