--- a/index.html
+++ b/index.html
@@ -5,43 +5,38 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Psych Diaries · Pawfect Day</title>
 
+<!-- Prettier fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Poppins:wght@700;800&display=swap" rel="stylesheet">
+
 <style>
   * { box-sizing: border-box; }
   html, body {
     height: 100%;
     margin: 0;
-    font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
     background: #f4f4f6;
     display: grid;
     place-items: center;
   }
 
-  /* ===== SCALLOPED CARD ===== */
+  /* ===== SMALL SCALLOPED WIDGET ===== */
   .poster {
     position: relative;
-    width: min(520px, 92vw);
+    width: min(320px, 90vw);   /* <<< MUCH smaller */
     aspect-ratio: 1 / 1;
     overflow: hidden;
 
-    /* scalloped edge trick */
-    --r: 18px;
-    background:
-      radial-gradient(circle at top left, transparent var(--r), white 0) top left,
-      radial-gradient(circle at top right, transparent var(--r), white 0) top right,
-      radial-gradient(circle at bottom left, transparent var(--r), white 0) bottom left,
-      radial-gradient(circle at bottom right, transparent var(--r), white 0) bottom right;
-    background-size: 50% 50%;
-    background-repeat: no-repeat;
+    --r: 14px;
 
     mask:
-      radial-gradient(circle at top left, transparent var(--r), black 0) top left,
-      radial-gradient(circle at top right, transparent var(--r), black 0) top right,
-      radial-gradient(circle at bottom left, transparent var(--r), black 0) bottom left,
-      radial-gradient(circle at bottom right, transparent var(--r), black 0) bottom right;
+      radial-gradient(circle at top left, transparent var(--r), black 0),
+      radial-gradient(circle at top right, transparent var(--r), black 0),
+      radial-gradient(circle at bottom left, transparent var(--r), black 0),
+      radial-gradient(circle at bottom right, transparent var(--r), black 0);
     mask-size: 50% 50%;
+    mask-position: top left, top right, bottom left, bottom right;
     mask-repeat: no-repeat;
 
-    box-shadow: 0 24px 70px rgba(0,0,0,.25);
+    box-shadow: 0 16px 40px rgba(0,0,0,.22);
   }
 
   /* ===== VIDEO BACKGROUND ===== */
@@ -51,7 +46,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center 40%; /* lifts cat slightly */
+    object-position: center 42%; /* cat slightly up */
     opacity: 1;
     pointer-events: none;
   }
@@ -61,7 +56,7 @@
     position: relative;
     z-index: 2;
     height: 100%;
-    padding: 56px 28px;
+    padding: 26px 18px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -71,23 +66,24 @@
   }
 
   .headline {
-    font-size: 42px;
-    font-weight: 500;
-    margin: 0 0 36px;
+    font-family: "Playfair Display", serif;
+    font-size: 22px;          /* <<< smaller */
+    font-weight: 600;
+    margin: 0 0 18px;
   }
 
   .date {
-    font-size: 84px;
-    font-weight: 900;
-    letter-spacing: 1px;
+    font-family: "Poppins", sans-serif;
+    font-size: 44px;          /* <<< scaled down */
+    font-weight: 800;
+    letter-spacing: .5px;
     line-height: 1;
   }
 
-  /* Keep text readable over video */
   .headline, .date {
     text-shadow:
-      0 2px 6px rgba(255,255,255,.6),
-      0 1px 0 rgba(255,255,255,.8);
+      0 2px 6px rgba(255,255,255,.65),
+      0 1px 0 rgba(255,255,255,.9);
   }
 
   @media (prefers-reduced-motion: reduce) {
